--- a/app/views/home/_twitterWidget.html.erb
+++ b/app/views/home/_twitterWidget.html.erb
@@ -1,6 +1,6 @@
 <div class="left_title">&nbsp;</div>
 <div class="right_title">&nbsp;</div>
-<div class="section_title" id="services_title">TWEETERINGISMS</div>
-<div class="home_section" id="twitter-widget">
+<div class="section_title" id="services_title">CHEEP CHEEPS</div>
+<div class="home_section" id="twitter-wid">
 	<a class="twitter-timeline" href="" data-widget-id="487991718218702848">Tweets about "@DetroitLibrary"</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
